final fix to thank you page and spacing of fertility and pregnancy icons

--- a/app/assets/stylesheets/thankyou.css
+++ b/app/assets/stylesheets/thankyou.css
@@ -60,3 +60,8 @@
     float: left;
 }
 
+.middle-icon {
+    padding: 30px 20px 0px;
+    margin: 0px 20px;
+    max-width: 200px;
+}
